--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
-</head>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
+  </head>
 
-<body>
+  <body>
     <div id="mirror-game">
-        <div id="game-object-popup" style="position: relative;"></div>
+      <div id="game-object-popup" style="position: relative"></div>
     </div>
-</body>
-
+  </body>
 </html>
