--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
   </head>
 
   <body>
+    <div id="top-bar" class="topBar"></div>
     <div id="mirror-game">
       <div id="game-object-popup" style="position: relative"></div>
     </div>
