implemented tutorial/welcome overlay

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,13 @@
   </head>
 
   <body>
-    <div id="top-bar" class="topBar"></div>
-    <div id="mirror-game">
-      <div id="game-object-popup" style="position: relative"></div>
+    <div id="top-bar" class="topBar">
+      <div id="controls" class="controls"></div>
+    </div>
+    <div>
+      <div id="mirror-game" class="mirrorGame">
+        <div id="game-object-popup" style="position: relative"></div>
+      </div>
     </div>
   </body>
 </html>
