--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <div id="top-bar" class="topBar">
+      hey
       <div id="controls" class="controls"></div>
     </div>
     <div>
