feat: expected percentage; chore: styling

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
 
   <body>
     <div id="top-bar" class="topBar">
-      <div id="controls" class="controls"></div>
+      <div id="controls" class="controls">
+        <label id="particle_chooser" for="particle_chooser" class="slider-switch">
+        </label>
+      </div>
     </div>
     <div>
       <div id="mirror-game" class="mirrorGame">
